# kai-lang

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ebnf-proposal.txt
docs/: grammar.ebnf  project-structure.md  readme.md
src/: main.rs
src/lexer/: lexer.rs  mod.rs  tests.rs  token.rs
src/parser/: ast.rs  expr.rs  grammar.rs  mod.rs  rd_parser.rs  tests.rs  types.rs
src/parser/lalr/: item.rs  lalr.rs  mod.rs  parser.rs
src/parser/recursive_descent/: core.rs  errors.rs  expressions.rs  mod.rs  statements.rs  types.rs
src/parser/semantic/: analyzer.rs
src/parser/symbol_table/: error.rs  mod.rs  symbol.rs  table.rs
